--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -878,6 +878,11 @@ div#aboutBlock p {
 
 /**********************************************************************/
 
+/* This allows for the destiny page for full scrolling - add 100 px per added clan */
+#wrathIncarnateClanStatus {
+	height: 7300px !important;
+}
+
 .ppb-1 {
 	background-image: url('/images/ppb-1.jpg');
 	background-size: 100%;
