--- a/templates/views/destiny.pug
+++ b/templates/views/destiny.pug
@@ -20,17 +20,20 @@ block content
 		p.fadeIn.russoOneh1B.fontSizeSmall
 			| We are #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Wrath Incarnate], a clan that strives to provide a rewarding and fun experience on Destiny 2. Destiny is best played with gamers that respect and help one another, this is the cornerstone of our clan. When players are respectful, helpful and have a common goal, great things can be achieved. Whether that goal is to complete the latest raid, or dominate in the Crucible, we got it.
 		p.fadeIn.russoOneh1B.fontSizeSmall
-			| We are recruiting all guardians to our clan! When joining any of our #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Wrath Incarnate] clans, you will also be invited to join our Discord server. This opens opportunities to meet and play with new guardians! We have Destiny 2 veterans that have completed all the content and ready to lead new PC players in the raid, trials or nightfall events! We also have a great team of moderators and event leaders to make your experience in Destiny better.
+			| We are recruiting all guardians! There are no age or skill restrictions, we welcome all guardians. We have Destiny veterans that have completed all the current content and ready to lead new players in raids, trials or nightfall events! We also have a great team of moderators and event leaders to make your experience in Destiny better.
 		p.fadeIn.russoOneh1B.fontSizeSmall
-			| #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Wrath Incarnate] is not only a Destiny clan, but a gaming community. We love Destiny but we also enjoy other games and game types (MOBAs, RPGs, MMOs, Card Games, etc). We encourage our clan members not only to play Destiny together, but play the games you love, meet new people and be a part of a great community of gamers.
+			| #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Wrath Incarnate] is not only a Destiny clan, but a gaming community. We love Destiny but we also enjoy other games and game types. We encourage our clan members not only to play Destiny together, but play the games you love, meet new people and be a part of a great community of gamers. Please visit our clan pages and request to join today!
 		p.fadeIn.russoOneh1B.fontSizeSmall
 			| This is a gaming community built around you, the player. We built our #[a(href="https://www.pixelpubgaming.com") website] to grow our community. We built our Discord server based upon user feedback and suggestions. We listen, make changes and help our members so they can enjoy social gaming at its best.
 		h1.fadeIn.russoOneh1B How to Join:
 		p.fadeIn.russoOneh1B.fontSizeSmall.textCenter
 			| 1) Join our #[a(href="https://discord.gg/uw3PMqV") Discord] <br> 
-			| 2) Join one of our clans! #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Click Here]! <br> 
+			| 2) Join one of our clans! See below for clan status and availability. <br> 
 			| If you have any questions regarding membership, feel free to reach out to our moderators on Discord.
 			
+	div#wrathIncarnateClanStatus.embed-responsive.embed-responsive-16by9
+		iframe.embed-responsive-item(src='http://pxp-win-clanlist.s3-website.us-east-2.amazonaws.com/', scrolling='no', allowfullscreen='')
+
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 DISCORD SERVER
