--- a/templates/views/destiny.pug
+++ b/templates/views/destiny.pug
@@ -28,11 +28,12 @@ block content
 		h1.fadeIn.russoOneh1B How to Join:
 		p.fadeIn.russoOneh1B.fontSizeSmall.textCenter
 			| 1) Join our #[a(href="https://discord.gg/uw3PMqV") Discord] <br> 
-			| 2) Join one of our clans! See below for clan status and availability. <br> 
+			| 2) Join one of our clans! #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Click Here]! <br> 
+			//| 2) Join one of our clans! See below for clan status and availability. <br> 
 			| If you have any questions regarding membership, feel free to reach out to our moderators on Discord.
-			
-	div#wrathIncarnateClanStatus.embed-responsive.embed-responsive-16by9
-		iframe.embed-responsive-item(src='http://pxp-win-clanlist.s3-website.us-east-2.amazonaws.com/', scrolling='no', allowfullscreen='')
+
+	//div#wrathIncarnateClanStatus.embed-responsive.embed-responsive-16by9
+	//	iframe.embed-responsive-item(src='http://pxp-win-clanlist.s3-website.us-east-2.amazonaws.com/', scrolling='no', allowfullscreen='')
 
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
