--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -13,7 +13,7 @@ block content
 					| Welcome to PixelPub! <br>
 					| We are a gaming community, one that strives to be fun, <br>
 					| rewarding, and brings gamers together to do what they love most, gaming. <br>
-					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br> <br>
+					| Be a part of our community by joining our #[a(href="https://discord.gg/PixelPub") Discord Server]. <br> <br>
 					| The following are some PixelPub community highlights!
 					
 	.container
@@ -52,20 +52,20 @@ block content
 	p#descGame2.between-text-block 
 		| PixelPub is proud to represent #[a(href="https://www.pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft guild! <br>
 		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance] & #[a(href="https://guildsofwow.com/the-bad-mama-jamas-h") Bleeding Hollow - Horde]! <br>
-		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/uw3PMqV") Discord] and talk to a recruiter today!
+		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/PixelPub") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
 	a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves")
 		h1 Treasure & Adventure Awaits!
 	p#descGame3.between-text-block 
 		| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br>
 		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br>
-		| For more info on how to join visit our #[a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]!
+		| For more info on how to join visit our #[a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/PixelPub") Discord Server]!
 	div#picGame4.game-img4.parallax.long
 	a(href="https://www.pixelpubgaming.com/blog/post/rocket-league")
 		h1 The Best Rocket League!
 	p#descGame4.between-text-block 
 		| PixelPub offers a fun, active and helpful Rocket League community. <br>
-		| Whether you are a seasoned veteran or new player, come join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and visit our #[a(href="https://www.pixelpubgaming.com/blog/post/rocket-league") blog] to learn more!
+		| Whether you are a seasoned veteran or new player, come join our #[a(href="https://discord.gg/PixelPub") Discord Server] and visit our #[a(href="https://www.pixelpubgaming.com/blog/post/rocket-league") blog] to learn more!
 	div#picGame5.game-img5.parallax.long
 	a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server")
 		h1 Build, Tame, Survive
@@ -101,10 +101,10 @@ block content
 		| Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br> 
 		| Make sure to say "Hi!" in chat, we love to talk to our twitch chat!
 	div#picDiscord.discord.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
+	a(href="https://discord.gg/PixelPub")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br> 
+		| Join our #[a(href="https://discord.gg/PixelPub") Discord Server]! <br> 
 		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br>
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 	
