--- a/templates/views/staff.pug
+++ b/templates/views/staff.pug
@@ -15,7 +15,7 @@ block content
 					| "Gaming is part of my life and I love sharing my gaming experiences with people. <br> 
 					| My favorite game IPs include: WoW, Destiny, Borderlands and Mass Effect. <br>
 					| I also enjoy tabletop and card games like D&D and Magic The Gathering. <br> 
-					| I hope to see you in-game or on our community #[a(href="https://discord.gg/uw3PMqV") Discord Server]! Happy Gaming!" <br>
+					| I hope to see you in-game or on our community #[a(href="https://discord.gg/PixelPub") Discord Server]! Happy Gaming!" <br>
 					| Twitter: #[a(href="https://twitter.com/Bloodrave120") @Bloodrave120] | PSN/XBOX/Steam: Bloodrave120 | BattleNet: Bloodrave120#1678
 		div#ppProfileTblRow2.divTableRow
 			div#ppProfileTblRow2CellLeft.divTableCell
@@ -55,10 +55,10 @@ block content
 					| Xbox: Fro | Battle.net: Froham#1436
 	
 	div#picDiscord.discord.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
+	a(href="https://discord.gg/PixelPub")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br> 
+		| Join our #[a(href="https://discord.gg/PixelPub") Discord Server]! <br> 
 		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br>
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 	
