--- a/templates/views/worldofwarcraft.pug
+++ b/templates/views/worldofwarcraft.pug
@@ -28,14 +28,14 @@ block content
 		h1.fadeIn.bangersh1B How to Join:
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
 			| - Looking to raid? Fill out our #[a(href="https://goo.gl/forms/P7LTU5azPYz2Tmxa2") Raiding Application] <br> 	
-			| - To join as a casual member, join our #[a(href="https://discord.gg/uw3PMqV") Discord] and introduce yourself in the #the-tavern channel! <br> 
+			| - To join as a casual member, join our #[a(href="https://discord.gg/PixelPub") Discord] and introduce yourself in the #the-tavern channel! <br> 
 			| If you have any questions regarding membership, feel free to reach out to our moderators on Discord.
 			
 	div#picDiscord.discord.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
+	a(href="https://discord.gg/PixelPub")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br> 
+		| Join our #[a(href="https://discord.gg/PixelPub") Discord Server]! <br> 
 		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br>
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 		
