--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -42,7 +42,7 @@ block content
 				| It may show up on the list one day! <br>
 				| <br>
 				| Q: This all sounds awesome! How do I become part of this community? <br>
-				| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! <br>
+				| A: Join our #[a(href="https://discord.gg/PixelPub") Discord Server] and game with us! <br>
 				| Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") YouTube], #[a(href="https://www.facebook.com/pixelpub") Facebook], #[a(href="https://www.instagram.com/pixelpubtv/") Instagram], #[a(href="https://twitter.com/pixelpubtv") Twitter]), we would love to hear from you! <br>
 				| <br>
 				| Q: Is it "PixelPub" or "Pixel Pub"? <br>
