--- a/templates/views/destiny.pug
+++ b/templates/views/destiny.pug
@@ -27,7 +27,7 @@ block content
 			| This is a gaming community built around you, the player. We built our #[a(href="https://www.pixelpubgaming.com") website] to grow our community. We built our Discord server based upon user feedback and suggestions. We listen, make changes and help our members so they can enjoy social gaming at its best.
 		h1.fadeIn.russoOneh1B How to Join:
 		p.fadeIn.russoOneh1B.fontSizeSmall.textCenter
-			| 1) Join our #[a(href="https://discord.gg/uw3PMqV") Discord] <br> 
+			| 1) Join our #[a(href="https://discord.gg/PixelPub") Discord] <br> 
 			| 2) Join one of our clans! #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Click Here]! <br> 
 			//| 2) Join one of our clans! See below for clan status and availability. <br> 
 			| If you have any questions regarding membership, feel free to reach out to our moderators on Discord.
@@ -36,10 +36,10 @@ block content
 	//	iframe.embed-responsive-item(src='http://pxp-win-clanlist.s3-website.us-east-2.amazonaws.com/', scrolling='no', allowfullscreen='')
 
 	div#picDiscord.discord.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
+	a(href="https://discord.gg/PixelPub")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br> 
+		| Join our #[a(href="https://discord.gg/PixelPub") Discord Server]! <br> 
 		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br>
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 		
