--- a/templates/views/games.pug
+++ b/templates/views/games.pug
@@ -40,10 +40,10 @@ block content
 			iBlack.fa.fa-angle-down.fa-5x(aria-hidden='true')
 	
 	div#picDiscord.discord.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
+	a(href="https://discord.gg/PixelPub")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br> 
+		| Join our #[a(href="https://discord.gg/PixelPub") Discord Server]! <br> 
 		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br>
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 			
