--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -51,7 +51,7 @@ block content
 		h1 BATTLE FOR AZEROTH
 	p#descGame2.between-text-block 
 		| PixelPub is proud to represent #[a(href="https://www.pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft guild! <br>
-		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance] & #[a(href="https://guildsofwow.com/the-bad-mama-jamas-h") Bleeding Hollow - Horde]! <br>
+		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance]! <br>
 		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/PixelPub") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
 	a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves")
