--- a/templates/views/worldofwarcraft.pug
+++ b/templates/views/worldofwarcraft.pug
@@ -16,7 +16,7 @@ block content
 	.below
 		h1.fadeIn.bangersh1B #[a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-world-of-warcraft-community") THE BAD MAMA JAMAS]
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
-			| Region: US-NA | Realm - Faction: #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance] | #[a(href="https://guildsofwow.com/the-bad-mama-jamas-h") Bleeding Hollow - Horde]
+			| Region: US-NA | Realm - Faction: #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance]
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
 			| “On the frontlines of the war, on the battlefields for our homeland, we are The Bad Mama Jamas.”
 		p.fadeIn.bangersh1B.fontSizeSmall
@@ -24,7 +24,7 @@ block content
 		p.fadeIn.bangersh1B.fontSizeSmall
 			| All players are welcome into the guild! When joining The Bad Mama Jamas, you will also be joining many more gamers on our Discord server. This opens opportunities to meet and play with new gamers! We have WoW veterans that have completed all the previous content and are ready to lead new players in the raids, mythic plus dungeons and battlegrounds! We also have a great team of moderators and event leaders to make your experience in WoW better.
 		p.fadeIn.bangersh1B.fontSizeSmall
-			| The Bad Mama Jamas is not only a WoW guild, but a gaming community. We love WoW but we also enjoy other games and game types (MOBAs, RPGs, FPS Games, Card Games, etc). We encourage our guild members not only to play WoW together, but play the games you love, meet new people and be a part of a great community of gamers.
+			| The Bad Mama Jamas is not only a WoW guild, but a gaming community. We love WoW but we also enjoy other games and game types. We encourage our guild members not only to play WoW together, but play the games you love, meet new people and be a part of a great community of gamers.
 		h1.fadeIn.bangersh1B How to Join:
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
 			| - Looking to raid? Fill out our #[a(href="https://goo.gl/forms/P7LTU5azPYz2Tmxa2") Raiding Application] <br> 	
