--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -26,8 +26,8 @@ block content
 				img(src='/images/d2-logo-press-1.png')#game1Icon
 			td
 				img(src='/images/wow-battle-for-azeroth-logo-press-1-small.png')#game2Icon
-			td
-				img(src='/images/sotlogo.png')#game3Icon
+			//td
+			//	img(src='/images/sotlogo.png')#game3Icon
 			td
 				img(src='/images/rocket-league-logo.png')#game4Icon
 			td
@@ -53,13 +53,13 @@ block content
 		| PixelPub is proud to represent #[a(href="https://www.pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft guild! <br>
 		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance]! <br>
 		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/PixelPub") Discord] and talk to a recruiter today!
-	div#picGame3.game-img3.parallax.long
-	a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves")
-		h1 Treasure & Adventure Awaits!
-	p#descGame3.between-text-block 
-		| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br>
-		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br>
-		| For more info on how to join visit our #[a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/PixelPub") Discord Server]!
+	//div#picGame3.game-img3.parallax.long
+	//a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves")
+	//	h1 Treasure & Adventure Awaits!
+	//p#descGame3.between-text-block 
+	//	| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br>
+	//	| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br>
+	//	| For more info on how to join visit our #[a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/PixelPub") Discord Server]!
 	div#picGame4.game-img4.parallax.long
 	a(href="https://www.pixelpubgaming.com/blog/post/rocket-league")
 		h1 The Best Rocket League!
