--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -901,7 +901,7 @@ div#aboutBlock p {
 }
 
 .game-img3 {
-	background-image: url('/images/SeaOfThieves.jpg');
+	background-image: url('/images/warframe-prime1.jpg');
 	background-size: 100%;
 }
 
