--- a/templates/views/games.pug
+++ b/templates/views/games.pug
@@ -25,6 +25,9 @@ block content
 					img(src='/images/overwatch-banner.jpg')
 		.divTableRow
 			.divTableCell.zoom
+				a(href='https://pixelpubgaming.com/blog/post/https://www.pixelpubgaming.com/blog/post/pixelpub-warframe-clan')
+					img(src='/images/warframe-prime2.jpg')
+			.divTableCell.zoom
 				a(href='https://pixelpubgaming.com/blog/post/monster-hunter-world')
 					img(src='/images/mhw-games-logo.jpg')
 	
